<resources>
    <string name="app_name">UVGram</string>
    <string name="loginButton">Iniciar sesión</string>
    <string name="signUp">Registrate</string>
    <string name="welcome">¡Bienvenido a UVGram!</string>
    <string name="loginText">Inicia sesión</string>
    <string name="emailLabel">Email</string>
    <string name="editProfile">Editar perfil</string>
    <string name="passwordHint">Contraseña</string>
...
    <string name="presentationLabel">Presentación</string>
    <string name="saveLabel">Guardar</string>
    <string name="cancelLabel">Cancelar</string>
    <string name="verificationText">Te hemos enviado un código de verificación al correo electrónico con el que te registraste. \nIngrésalo en el siguiente campo.</string>
    <string name="resendCode">¿No recibiste el código?</string>
    <string name="retryCodeSent">Solicita uno nuevo aquí.</string>
    <string name="emptyInputs">No dejar campos vacíos.</string>
    <string name="followRequests">Solicitudes de seguimiento</string>
    <string name="followText">Seguir</string>
    <string name="writeComment">Escribe un comentario</string>
    <string name="successfulLogin">¡Inicio de sesión exitoso!</string>
    <string name="passwordFormatError">Contraseña inválida. Debe tener al menos 6 carácteres.</string>
    <string name="incorrectPassword">Contraseña errónea.</string>
    <string name="passwordsNotMatching">Las contraseñas no coinciden.</string>
    <string name="userNotFound">Usuario no encontrado.</string>
    <string name="validCharactersUsername">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_</string>
    <string name="validCharactersVerificationCode">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="validCharactersFullName">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="validCharactersEmail">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-@.</string>
    <string name="validCharactersPhone">0123456789</string>
    <string name="invalidCodeFormat">Código de verificación no válido.</string>
...
