<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="Foto de Facultad de Estadística e Informática"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pxl_20221014_215725107_crop" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <RelativeLayout
            android:layout_width="409dp"
            android:layout_height="403dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/welcome"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/loginText"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginText"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/usernameLabel"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/uvGreen"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputText"
                    android:digits="@string/validCharactersUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:textSize="14dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextField"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/passwordHint"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/uvGreen"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:textSize="14dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTextField"
                android:text="@string/forgotPassword"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"/>

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/textButton"
                android:layout_toEndOf="@+id/forgotLabel"
                android:layout_below="@+id/passwordTextField"
                android:layout_marginLeft="-8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickHereLink"
                android:visibility="gone"
                android:layout_marginTop="1dp"
                android:textColor="@color/uvBlue"
                />

            <Button
                android:id="@+id/loginButton"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotLabel"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/uvBlue"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/loginText"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/registrationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrationLabel"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"/>

                <Button
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/registrationButton"
                    android:layout_toEndOf="@+id/registrationLabel"
                    android:layout_marginLeft="-8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clickHereLink"
                    android:layout_marginTop="1dp"
                    android:textColor="@color/uvBlue"
                    />

            </RelativeLayout>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>